--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/fullstack
+spring.datasource.username=root
+spring.datasource.password=
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+server.servlet.context-path=/fullstack
